kubernetes/argocd_cluster02/config/my-k8s-app/manifests/deployment.yaml

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: my-app
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: docker.io/flaviorssilva/my-app:9f7f624
          ports:
            - containerPort: 3000
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause:
            duration: 30s
        - setWeight: 50
        - pause:
            duration: 30s
        - setWeight: 100
